--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/azure/azure.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/azure/azure.adoc
@@ -48,11 +48,79 @@ The creation of this service principal returns three pieces of identification in
 ======
 Tab RKE::
 +
-1. [Create your cloud credentials](#1-create-your-cloud-credentials) 2. [Create a node template with your cloud credentials](#2-create-a-node-template-with-your-cloud-credentials) 3. [Create a cluster with node pools using the node template](#3-create-a-cluster-with-node-pools-using-the-node-template) ### 1. Create your cloud credentials 1. Click **☰ > Cluster Management**. 1. Click **Cloud Credentials**. 1. Click **Create**. 1. Click **Azure**. 1. Enter your Azure credentials. 1. Click **Create**. **Result:** You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters. ### 2. Create a node template with your cloud credentials Creating a [node template](../infra-providers.md#node-templates) for Azure will allow Rancher to provision new nodes in Azure. Node templates can be reused for other clusters. 1. Click **☰ > Cluster Management**. 1. Click **RKE1 Configuration > Node Templates**. 1. Click **Add Template**. 1. Click **Azure**. 1. Fill out a node template for Azure. For help filling out the form, refer to [Azure Node Template Configuration.](node-template-configuration.md) ### 3. Create a cluster with node pools using the node template Use Rancher to create a Kubernetes cluster in Azure. 1. Click **☰ > Cluster Management**. 1. On the **Clusters** page, click **Create**. 1. Click **Azure**. 1. Enter a **Cluster Name**. 1. Add one or more node pools to your cluster. Each node pool uses a node template to provision new nodes. For more information about node pools, including best practices, see [this section.](../infra-providers.md) 1. In the **Cluster Configuration** to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. To see more cluster options, click on **Show advanced options**. For help configuring the cluster, refer to the [RKE cluster configuration reference.](../../configuration/rke1.md) 1. Use **Member Roles** to configure user authorization for the cluster. Click **Add Member** to add users that can access the cluster. Use the **Role** drop-down to set permissions for each user. 1. Click **Create**. 
+--
+[pass]
+<h3><a class="anchor" href="#_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+
+. Click *☰ > Cluster Management*.
+. Click *Cloud Credentials*.
+. Click *Create*.
+. Click *Azure*.
+. Enter your Azure credentials.
+. Click *Create*.
+
+*Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.
+
+[pass]
+<h3><a class="anchor" href="#_2_create_a_node_template_with_your_cloud_credentials"></a>2. Create a node template with your cloud credentials</h3>
+
+Creating a link:use-new-nodes-in-an-infra-provider.adoc#node-templates[node template] for Azure will allow Rancher to provision new nodes in Azure. Node templates can be reused for other clusters.
+
+. Click *☰ > Cluster Management*.
+. Click menu:RKE1 Configuration[Node Templates].
+. Click *Add Template*.
+. Click *Azure*.
+. Fill out a node template for Azure. For help filling out the form, refer to xref:../../../../reference-guides/cluster-configuration/downstream-cluster-configuration/node-template-configuration/azure.adoc[Azure Node Template Configuration.]
+
+[pass]
+<h3><a class="anchor" href="#_3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
+
+Use Rancher to create a Kubernetes cluster in Azure.
+
+. Click *☰ > Cluster Management*.
+. On the *Clusters* page, click *Create*.
+. Click *Azure*.
+. Enter a *Cluster Name*.
+. Add one or more node pools to your cluster. Each node pool uses a node template to provision new nodes. For more information about node pools, including best practices, see xref:use-new-nodes-in-an-infra-provider.adoc[this section.]
+. In the *Cluster Configuration* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. To see more cluster options, click on *Show advanced options*. For help configuring the cluster, refer to the xref:../../../../reference-guides/cluster-configuration/rancher-server-configuration/rke1-cluster-configuration.adoc[RKE cluster configuration reference.]
+. Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
+. Click *Create*.
+--
 
 Tab RKE2::
 +
-### 1. Create your cloud credentials If you already have a set of cloud credentials to use, skip this section. 1. Click **☰ > Cluster Management**. 1. Click **Cloud Credentials**. 1. Click **Create**. 1. Click **Azure**. 1. Enter your Azure credentials. 1. Click **Create**. **Result:** You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters. ### 2. Create your cluster Use Rancher to create a Kubernetes cluster in Azure. 1. Click **☰ > Cluster Management**. 1. On the **Clusters** page, click **Create**. 1. Toggle the switch to **RKE2/K3s**. 1. Click **Azure**. 1. Select a **Cloud Credential**, if more than one exists. Otherwise, it's preselected. 1. Enter a **Cluster Name**. 1. Create a machine pool for each Kubernetes role. Refer to the [best practices](../infra-providers.md#node-roles) for recommendations on role assignments and counts. 1. For each machine pool, define the machine configuration. Refer to the [Azure machine configuration reference](machine-configuration.md) for information on configuration options. 1. Use the **Cluster Configuration** to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. For help configuring the cluster, refer to the [RKE2 cluster configuration reference.](../../configuration/rke2.md) 1. Use **Member Roles** to configure user authorization for the cluster. Click **Add Member** to add users that can access the cluster. Use the **Role** drop-down to set permissions for each user. 1. Click **Create**.
+--
+[pass]
+<h3><a class="anchor" href="#_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+
+If you already have a set of cloud credentials to use, skip this section.
+
+. Click *☰ > Cluster Management*.
+. Click *Cloud Credentials*.
+. Click *Create*.
+. Click *Azure*.
+. Enter your Azure credentials.
+. Click *Create*.
+
+*Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.
+
+[pass]
+<h3><a class="anchor" href="#_2_create_your_cluster"></a>2. Create your cluster</h3>
+
+Use Rancher to create a Kubernetes cluster in Azure.
+
+. Click *☰ > Cluster Management*.
+. On the *Clusters* page, click *Create*.
+. Toggle the switch to *RKE2/K3s*.
+. Click *Azure*.
+. Select a *Cloud Credential*, if more than one exists. Otherwise, it's preselected.
+. Enter a *Cluster Name*.
+. Create a machine pool for each Kubernetes role. Refer to the link:use-new-nodes-in-an-infra-provider.adoc#node-roles[best practices] for recommendations on role assignments and counts.
+ .. For each machine pool, define the machine configuration. Refer to the xref:../../../../reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/azure.adoc[Azure machine configuration reference] for information on configuration options.
+. Use the *Cluster Configuration* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation.  For help configuring the cluster, refer to the xref:../../../../reference-guides/cluster-configuration/rancher-server-configuration/rke2-cluster-configuration.adoc[RKE2 cluster configuration reference.]
+. Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
+. Click *Create*.
+--
 ======
 
 *Result:*
