--- a/versions/latest/modules/en/pages/cluster-deployment/set-up-cloud-providers/azure.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/set-up-cloud-providers/azure.adoc
@@ -1,5 +1,4 @@
 = Setting up the Azure Cloud Provider
-:experimental:
 
 [NOTE]
 .Important:
@@ -214,33 +213,432 @@ roleRef:
 ======
 Tab RKE2::
 +
-1. Select **External** from the **Cloud Provider** drop-down in the **Cluster Configuration** section. 2. Prepare the Cloud Provider Configuration to set it in the next step. Note that Rancher automatically creates a new Network Security Group, Resource Group, Availability Set, Subnet, and Virtual Network. If you already have some or all of these created, you must specify them before creating the cluster. - Click **Show Advanced** to view or edit these automatically generated names. Your Cloud Provider Configuration **must** match the fields in the **Machine Pools** section. If you have multiple pools, they must all use the same Resource Group, Availability Set, Subnet, Virtual Network, and Network Security Group. 3. Under **Cluster Configuration > Advanced**, click **Add** under **Additional Controller Manager Args** and add this flag: `--configure-cloud-routes=false`. Note that the chart reads the Cloud Provider Config from the secret in the `kube-system` namespace. An example secret for the Cloud Provider Config is shown below. Modify it as needed. Refer to the full list of configuration options in the [upstream docs](https://cloud-provider-azure.sigs.k8s.io/install/configs/). ```yaml apiVersion: helm.cattle.io/v1 kind: HelmChart metadata: name: azure-cloud-controller-manager namespace: kube-system spec: chart: cloud-provider-azure repo: https://raw.githubusercontent.com/kubernetes-sigs/cloud-provider-azure/master/helm/repo targetNamespace: kube-system bootstrap: true valuesContent: |- infra: clusterName: +++<cluster-name>+++cloudControllerManager: cloudConfigSecretName: azure-cloud-config cloudConfig: null clusterCIDR: null enableDynamicReloading: 'true' nodeSelector: node-role.kubernetes.io/control-plane: 'true' allocateNodeCidrs: 'false' hostNetworking: true caCertDir: /etc/ssl configureCloudRoutes: 'false' enabled: true tolerations: - effect: NoSchedule key: node-role.kubernetes.io/master - effect: NoSchedule key: node-role.kubernetes.io/control-plane value: 'true' - effect: NoSchedule key: node.cloudprovider.kubernetes.io/uninitialized value: 'true' --- apiVersion: v1 kind: Secret metadata: name: azure-cloud-config namespace: kube-system type: Opaque stringData: cloud-config: |- { "cloud": "AzurePublicCloud", "tenantId": "+++<tenant-id>+++", "subscriptionId": "+++<subscription-id>+++", "aadClientId": "+++<client-id>+++", "aadClientSecret": "+++<tenant-id>+++", "resourceGroup": "docker-machine", "location": "westus", "subnetName": "docker-machine", "securityGroupName": "rancher-managed-kqmtsjgJ", "securityGroupResourceGroup": "docker-machine", "vnetName": "docker-machine-vnet", "vnetResourceGroup": "docker-machine", "primaryAvailabilitySetName": "docker-machine", "routeTableResourceGroup": "docker-machine", "cloudProviderBackoff": false, "useManagedIdentityExtension": false, "useInstanceMetadata": true, "loadBalancerSku": "standard", "excludeMasterFromStandardLB": false, } --- apiVersion: rbac.authorization.k8s.io/v1beta1 kind: ClusterRole metadata: labels: kubernetes.io/cluster-service: "true" name: system:azure-cloud-provider-secret-getter rules: - apiGroups: [""] resources: ["secrets"] resourceNames: ["azure-cloud-config"] verbs: - get --- apiVersion: rbac.authorization.k8s.io/v1beta1 kind: ClusterRoleBinding metadata: labels: kubernetes.io/cluster-service: "true" name: system:azure-cloud-provider-secret-getter roleRef: apiGroup: rbac.authorization.k8s.io kind: ClusterRole name: system:azure-cloud-provider-secret-getter subjects: - kind: ServiceAccount name: azure-cloud-config namespace: kube-system ``` 4. Click **Create** to submit the form and create the cluster.  
+--
+. Select *External* from the *Cloud Provider* drop-down in the *Cluster Configuration* section.
+. Prepare the Cloud Provider Configuration to set it in the next step. Note that Rancher automatically creates a new Network Security Group, Resource Group, Availability Set, Subnet, and Virtual Network. If you already have some or all of these created, you must specify them before creating the cluster.
+ ** Click *Show Advanced* to view or edit these automatically generated names. Your Cloud Provider Configuration *must* match the fields in the *Machine Pools* section. If you have multiple pools, they must all use the same Resource Group, Availability Set, Subnet, Virtual Network, and Network Security Group.
+. Under menu:Cluster Configuration[Advanced], click *Add* under *Additional Controller Manager Args* and add this flag: `--configure-cloud-routes=false`.
++
+Note that the chart reads the Cloud Provider Config from the secret in the `kube-system` namespace. An example secret for the Cloud Provider Config is shown below. Modify it as needed. Refer to the full list of configuration options in the https://cloud-provider-azure.sigs.k8s.io/install/configs/[upstream docs].
++
+[,yaml]
+----
+apiVersion: helm.cattle.io/v1
+kind: HelmChart
+metadata:
+  name: azure-cloud-controller-manager
+  namespace: kube-system
+spec:
+  chart: cloud-provider-azure
+  repo: https://raw.githubusercontent.com/kubernetes-sigs/cloud-provider-azure/master/helm/repo
+  targetNamespace: kube-system
+  bootstrap: true
+  valuesContent: |-
+    infra:
+      clusterName: <cluster-name>
+    cloudControllerManager:
+      cloudConfigSecretName: azure-cloud-config
+      cloudConfig: null
+      clusterCIDR: null
+      enableDynamicReloading: 'true'
+      nodeSelector:
+        node-role.kubernetes.io/control-plane: 'true'
+      allocateNodeCidrs: 'false'
+      hostNetworking: true
+      caCertDir: /etc/ssl
+      configureCloudRoutes: 'false'
+      enabled: true
+      tolerations:
+        - effect: NoSchedule
+          key: node-role.kubernetes.io/master
+        - effect: NoSchedule
+          key: node-role.kubernetes.io/control-plane
+          value: 'true'
+        - effect: NoSchedule
+          key: node.cloudprovider.kubernetes.io/uninitialized
+          value: 'true'
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: azure-cloud-config
+  namespace: kube-system
+type: Opaque
+stringData:
+  cloud-config: |-
+    {
+      "cloud": "AzurePublicCloud",
+      "tenantId": "<tenant-id>",
+      "subscriptionId": "<subscription-id>",
+      "aadClientId": "<client-id>",
+      "aadClientSecret": "<tenant-id>",
+      "resourceGroup": "docker-machine",
+      "location": "westus",
+      "subnetName": "docker-machine",
+      "securityGroupName": "rancher-managed-kqmtsjgJ",
+      "securityGroupResourceGroup": "docker-machine",
+      "vnetName": "docker-machine-vnet",
+      "vnetResourceGroup": "docker-machine",
+      "primaryAvailabilitySetName": "docker-machine",
+      "routeTableResourceGroup": "docker-machine",
+      "cloudProviderBackoff": false,
+      "useManagedIdentityExtension": false,
+      "useInstanceMetadata": true,
+      "loadBalancerSku": "standard",
+      "excludeMasterFromStandardLB": false,
+    }
+---
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRole
+metadata:
+  labels:
+    kubernetes.io/cluster-service: "true"
+  name: system:azure-cloud-provider-secret-getter
+rules:
+  - apiGroups: [""]
+resources: ["secrets"]
+resourceNames: ["azure-cloud-config"]
+verbs:
+  - get
+---
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRoleBinding
+metadata:
+  labels:
+    kubernetes.io/cluster-service: "true"
+  name: system:azure-cloud-provider-secret-getter
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: system:azure-cloud-provider-secret-getter
+  subjects:
+    - kind: ServiceAccount
+      name: azure-cloud-config
+      namespace: kube-system
+----
+
+. Click *Create* to submit the form and create the cluster.
+--
 
 Tab RKE1::
 +
-1. Choose **External** from the **Cloud Provider** drop-down in the **Cluster Options** section. This sets `--cloud-provider=external` for Kubernetes components. 2. Install the `cloud-provider-azure` chart after the cluster finishes provisioning. Note that the cluster is not successfully provisioned and nodes are still in an `uninitialized` state until you deploy the cloud controller manager. This can be done [manually using CLI](#helm-chart-installation-from-cli), or via [Helm charts in UI](#helm-chart-installation-from-ui). Refer to the [official Azure upstream documentation](https://cloud-provider-azure.sigs.k8s.io/install/azure-ccm/) for more details on deploying the Cloud Controller Manager. 
-====== ### Helm Chart Installation from CLI Official upstream docs for [Helm chart installation](https://github.com/kubernetes-sigs/cloud-provider-azure/tree/master/helm/cloud-provider-azure) can be found on Github. 1. Create a `azure-cloud-config` secret with the required [cloud provider config](#cloud-provider-configuration). ```shell kubectl apply -f azure-cloud-config.yaml ``` 2. Add the Helm repository: ```shell helm repo add azure-cloud-controller-manager https://raw.githubusercontent.com/kubernetes-sigs/cloud-provider-azure/master/helm/repo helm repo update ``` 3. Create a `values.yaml` file with the following contents to override the default `values.yaml`: 
+--
+. Choose *External* from the *Cloud Provider* drop-down in the *Cluster Options* section. This sets `--cloud-provider=external` for Kubernetes components.
+. Install the `cloud-provider-azure` chart after the cluster finishes provisioning. Note that the cluster is not successfully provisioned and nodes are still in an `uninitialized` state until you deploy the cloud controller manager. This can be done <<helm-chart-installation-from-cli,manually using CLI>>, or via <<helm-chart-installation-from-ui,Helm charts in UI>>.
+
+Refer to the https://cloud-provider-azure.sigs.k8s.io/install/azure-ccm/[official Azure upstream documentation] for more details on deploying the Cloud Controller Manager.
+--
+======
+
+=== Helm Chart Installation from CLI
+
+Official upstream docs for https://github.com/kubernetes-sigs/cloud-provider-azure/tree/master/helm/cloud-provider-azure[Helm chart installation] can be found on Github.
+
+. Create a `azure-cloud-config` secret with the required <<cloud-provider-configuration,cloud provider config>>.
++
+[,shell]
+----
+kubectl apply -f azure-cloud-config.yaml
+----
+
+. Add the Helm repository:
++
+[,shell]
+----
+helm repo add azure-cloud-controller-manager https://raw.githubusercontent.com/kubernetes-sigs/cloud-provider-azure/master/helm/repo
+helm repo update
+----
+
+. Create a `values.yaml` file with the following contents to override the default `values.yaml`:
++
+[tabs,sync-group-id=k8s-distro]
+======
+Tab RKE2::
++
+--
+[,yaml]
+----
+# values.yaml
+infra:
+  clusterName: <cluster-name>
+cloudControllerManager:
+  cloudConfigSecretName: azure-cloud-config
+  cloudConfig: null
+  clusterCIDR: null
+  enableDynamicReloading: 'true'
+  configureCloudRoutes: 'false'
+  allocateNodeCidrs: 'false'
+  caCertDir: /etc/ssl
+  enabled: true
+  replicas: 1
+  hostNetworking: true
+  nodeSelector:
+    node-role.kubernetes.io/control-plane: 'true'
+  tolerations:
+    - effect: NoSchedule
+      key: node-role.kubernetes.io/master
+    - effect: NoSchedule
+      key: node-role.kubernetes.io/control-plane
+      value: 'true'
+    - effect: NoSchedule
+      key: node.cloudprovider.kubernetes.io/uninitialized
+      value: 'true'
+----
+--
+
+Tab RKE::
++
+--
+[,yaml]
+----
+# values.yaml
+cloudControllerManager:
+  cloudConfigSecretName: azure-cloud-config
+  cloudConfig: null
+  clusterCIDR: null
+  enableDynamicReloading: 'true'
+  configureCloudRoutes: 'false'
+  allocateNodeCidrs: 'false'
+  caCertDir: /etc/ssl
+  enabled: true
+  replicas: 1
+  hostNetworking: true
+  nodeSelector:
+    node-role.kubernetes.io/controlplane: 'true'
+    node-role.kubernetes.io/control-plane: null
+  tolerations:
+    - effect: NoSchedule
+      key: node-role.kubernetes.io/controlplane
+      value: 'true'
+    - effect: NoSchedule
+      key: node.cloudprovider.kubernetes.io/uninitialized
+      value: 'true'
+infra:
+  clusterName: <cluster-name>
+----
+--
+====== 
+
+. Install the Helm chart:
++
+[,shell]
+----
+helm upgrade --install cloud-provider-azure azure-cloud-controller-manager/cloud-provider-azure -n kube-system --values values.yaml
+----
++
+Verify that the Helm chart installed successfully:
++
+[,shell]
+----
+helm status cloud-provider-azure -n kube-system
+----
+
+. (Optional) Verify that the cloud controller manager update succeeded:
++
+[,shell]
+----
+kubectl rollout status deployment -n kube-system cloud-controller-manager
+kubectl rollout status daemonset -n kube-system cloud-node-manager
+----
+
+. The cloud provider is responsible for setting the ProviderID of the node. Check if all nodes are initialized with the ProviderID:
++
+[,shell]
+----
+kubectl describe nodes | grep "ProviderID"
+----
+
+=== Helm Chart Installation from UI
+
+. Click *☰*, then select the name of the cluster from the left navigation.
+. Select *Apps* > *Repositories*.
+. Click the *Create* button.
+. Enter `+https://raw.githubusercontent.com/kubernetes-sigs/cloud-provider-azure/master/helm/repo+` in the *Index URL* field.
+. Select *Apps* > *Charts* from the left navigation and install *cloud-provider-azure* chart.
+. Select the namespace, `kube-system`, and enable *Customize Helm options before install*.
+. Replace `cloudConfig: /etc/kubernetes/azure.json` to read from the Cloud Config Secret and enable dynamic reloading:
++
+[,yaml]
+----
+  cloudConfigSecretName: azure-cloud-config
+  enableDynamicReloading: 'true'
+----
+
+. Update the following fields as required:
++
+[,yaml]
+----
+  allocateNodeCidrs: 'false'
+  configureCloudRoutes: 'false'
+  clusterCIDR: null
+----
 
 [tabs,sync-group-id=k8s-distro]
 ======
 Tab RKE2::
 +
-```yaml # values.yaml infra: clusterName: +++<cluster-name>+++cloudControllerManager: cloudConfigSecretName: azure-cloud-config cloudConfig: null clusterCIDR: null enableDynamicReloading: 'true' configureCloudRoutes: 'false' allocateNodeCidrs: 'false' caCertDir: /etc/ssl enabled: true replicas: 1 hostNetworking: true nodeSelector: node-role.kubernetes.io/control-plane: 'true' tolerations: - effect: NoSchedule key: node-role.kubernetes.io/master - effect: NoSchedule key: node-role.kubernetes.io/control-plane value: 'true' - effect: NoSchedule key: node.cloudprovider.kubernetes.io/uninitialized value: 'true' ```  
+--
+[start=9]
+. Rancher-provisioned RKE2 nodes have the selector `node-role.kubernetes.io/control-plane` set to `true`. Update the nodeSelector:
++
+[,yaml]
+----
+nodeSelector:
+  node-role.kubernetes.io/control-plane: 'true'
+----
+--
 
 Tab RKE::
 +
-```yaml # values.yaml cloudControllerManager: cloudConfigSecretName: azure-cloud-config cloudConfig: null clusterCIDR: null enableDynamicReloading: 'true' configureCloudRoutes: 'false' allocateNodeCidrs: 'false' caCertDir: /etc/ssl enabled: true replicas: 1 hostNetworking: true nodeSelector: node-role.kubernetes.io/controlplane: 'true' node-role.kubernetes.io/control-plane: null tolerations: - effect: NoSchedule key: node-role.kubernetes.io/controlplane value: 'true' - effect: NoSchedule key: node.cloudprovider.kubernetes.io/uninitialized value: 'true' infra: clusterName: +++<cluster-name>+++```  
-====== 4. Install the Helm chart: ```shell helm upgrade --install cloud-provider-azure azure-cloud-controller-manager/cloud-provider-azure -n kube-system --values values.yaml ``` Verify that the Helm chart installed successfully: ```shell helm status cloud-provider-azure -n kube-system ``` 5. (Optional) Verify that the cloud controller manager update succeeded: ```shell kubectl rollout status deployment -n kube-system cloud-controller-manager kubectl rollout status daemonset -n kube-system cloud-node-manager ``` 6. The cloud provider is responsible for setting the ProviderID of the node. Check if all nodes are initialized with the ProviderID: ```shell kubectl describe nodes | grep "ProviderID" ``` ### Helm Chart Installation from UI 1. Click **☰**, then select the name of the cluster from the left navigation. 2. Select **Apps** > **Repositories**. 3. Click the **Create** button. 4. Enter `https://raw.githubusercontent.com/kubernetes-sigs/cloud-provider-azure/master/helm/repo` in the **Index URL** field. 5. Select **Apps** > **Charts** from the left navigation and install **cloud-provider-azure** chart. 6. Select the namespace, `kube-system`, and enable **Customize Helm options before install**. 7. Replace `cloudConfig: /etc/kubernetes/azure.json` to read from the Cloud Config Secret and enable dynamic reloading: ```yaml cloudConfigSecretName: azure-cloud-config enableDynamicReloading: 'true' ``` 8. Update the following fields as required: ```yaml allocateNodeCidrs: 'false' configureCloudRoutes: 'false' clusterCIDR: null ``` 
-
-[tabs,sync-group-id=k8s-distro]
-======
-Tab RKE2::
+--
+[start=9]
+. Rancher-provisioned RKE nodes are tainted `node-role.kubernetes.io/controlplane`. Update tolerations and the nodeSelector:
 +
-9. Rancher-provisioned RKE2 nodes have the selector `node-role.kubernetes.io/control-plane` set to `true`. Update the nodeSelector: ```yaml nodeSelector: node-role.kubernetes.io/control-plane: 'true' ``` 
-
-Tab RKE::
+[,yaml]
+----
+tolerations:
+  - effect: NoSchedule
+    key: node.cloudprovider.kubernetes.io/uninitialized
+    value: 'true'
+  - effect: NoSchedule
+    value: 'true'
+    key: node-role.kubernetes.io/controlplane
+----
 +
-10. Rancher-provisioned RKE nodes are tainted `node-role.kubernetes.io/controlplane`. Update tolerations and the nodeSelector: ```yaml tolerations: - effect: NoSchedule key: node.cloudprovider.kubernetes.io/uninitialized value: 'true' - effect: NoSchedule value: 'true' key: node-role.kubernetes.io/controlplane ``` ```yaml nodeSelector: node-role.kubernetes.io/controlplane: 'true' ```
-====== 11. Install the chart and confirm that the cloud controller and cloud node manager deployed successfully: ```shell kubectl rollout status deployment -n kube-system cloud-controller-manager kubectl rollout status daemonset -n kube-system cloud-node-manager ``` 12. The cloud provider is responsible for setting the ProviderID of the node. Check if all nodes are initialized with the ProviderID: ```shell kubectl describe nodes | grep "ProviderID" ``` ### Installing CSI Drivers Install [Azure Disk CSI driver](https://github.com/kubernetes-sigs/azuredisk-csi-driver) or [Azure File CSI Driver](https://github.com/kubernetes-sigs/azurefile-csi-driver) to access [Azure Disk](https://azure.microsoft.com/en-us/services/storage/disks/) or [Azure File](https://azure.microsoft.com/en-us/services/storage/disks/) volumes respectively. The steps to install the Azure Disk CSI driver are shown below. You can install the Azure File CSI Driver in a similar manner by following the [helm installation documentation](https://github.com/kubernetes-sigs/azurefile-csi-driver/blob/master/charts/README.md). ::: note Important: Clusters must be provisioned using `Managed Disk` to use Azure Disk. You can configure this when creating **RKE1 Node Templates** or **RKE2 Machine Pools*. ::: Official upstream docs for [Helm chart installation](https://github.com/kubernetes-sigs/azuredisk-csi-driver/blob/master/charts/README.md) can be found on Github. 1. Add and update the helm repository: ```shell helm repo add azuredisk-csi-driver https://raw.githubusercontent.com/kubernetes-sigs/azuredisk-csi-driver/master/charts helm repo update azuredisk-csi-driver ``` 1. Install the chart as shown below, updating the --version argument as needed. Refer to the full list of latest chart configurations in the [upstream docs](https://github.com/kubernetes-sigs/azuredisk-csi-driver/blob/master/charts/README.md#latest-chart-configuration). ```shell helm install azuredisk-csi-driver azuredisk-csi-driver/azuredisk-csi-driver --namespace kube-system --version v1.30.1 --set controller.cloudConfigSecretName=azure-cloud-config --set controller.cloudConfigSecretNamespace=kube-system --set controller.runOnControlPlane=true ``` 2. (Optional) Verify that the azuredisk-csi-driver installation succeeded: ```shell kubectl --namespace=kube-system get pods --selector="app.kubernetes.io/name=azuredisk-csi-driver" --watch ``` 3. Provision an example Storage Class: ```shell cat <<EOF | kubectl create -f - kind: StorageClass apiVersion: storage.k8s.io/v1 metadata: name: standard provisioner: kubernetes.io/azure-disk parameters: storageaccounttype: Standard_LRS kind: Managed EOF ``` Verify that the storage class has been provisioned: ```shell kubectl get storageclasses ``` 4. Create a PersistentVolumeClaim: ```shell cat <<EOF | kubectl create -f - kind: PersistentVolumeClaim apiVersion: v1 metadata: name: azure-disk-pvc spec: storageClassName: standard accessModes: - ReadWriteOnce resources: requests: storage: 5Gi EOF ``` Verify that the PersistentVolumeClaim and PersistentVolume have been created: ```shell kubectl get persistentvolumeclaim kubectl get persistentvolume ``` 5. Attach the new Azure Disk: You can now mount the Kubernetes PersistentVolume into a Kubernetes Pod. The disk can be consumed by any Kubernetes object type, including a Deployment, DaemonSet, or StatefulSet. However, the following example simply mounts the PersistentVolume into a standalone Pod. ```shell cat <<EOF | kubectl create -f - kind: Pod apiVersion: v1 metadata: name: mypod-dynamic-azuredisk spec: containers: - name: mypod image: nginx ports: - containerPort: 80 name: "http-server" volumeMounts: - mountPath: "/usr/share/nginx/html" name: storage volumes: - name: storage persistentVolumeClaim: claimName: azure-disk-pvc EOF ```+++</cluster-name></cluster-name>
-======</tenant-id>++++++</client-id>++++++</subscription-id>++++++</tenant-id>++++++</cluster-name>
-======
+[,yaml]
+----
+nodeSelector:
+  node-role.kubernetes.io/controlplane: 'true'
+----
+--
+====== 
+
+[start=10]
+. Install the chart and confirm that the cloud controller and cloud node manager deployed successfully:
++
+[,shell]
+----
+kubectl rollout status deployment -n kube-system cloud-controller-manager
+kubectl rollout status daemonset -n kube-system cloud-node-manager
+----
+
+. The cloud provider is responsible for setting the ProviderID of the node. Check if all nodes are initialized with the ProviderID:
++
+[,shell]
+----
+kubectl describe nodes | grep "ProviderID"
+----
+
+=== Installing CSI Drivers
+
+Install https://github.com/kubernetes-sigs/azuredisk-csi-driver[Azure Disk CSI driver] or https://github.com/kubernetes-sigs/azurefile-csi-driver[Azure File CSI Driver] to access https://azure.microsoft.com/en-us/services/storage/disks/[Azure Disk] or https://azure.microsoft.com/en-us/services/storage/disks/[Azure File] volumes respectively.
+
+The steps to install the Azure Disk CSI driver are shown below. You can install the Azure File CSI Driver in a similar manner by following the https://github.com/kubernetes-sigs/azurefile-csi-driver/blob/master/charts/README.md[helm installation documentation].
+
+[NOTE]
+.Important
+====
+Clusters must be provisioned using `Managed Disk` to use Azure Disk. You can configure this when creating *RKE1 Node Templates* or _*RKE2 Machine Pools_.
+====
+
+Official upstream docs for https://github.com/kubernetes-sigs/azuredisk-csi-driver/blob/master/charts/README.md[Helm chart installation] can be found on Github.
+
+. Add and update the helm repository:
++
+[,shell]
+----
+helm repo add azuredisk-csi-driver https://raw.githubusercontent.com/kubernetes-sigs/azuredisk-csi-driver/master/charts
+helm repo update azuredisk-csi-driver
+----
+
+. Install the chart as shown below, updating the --version argument as needed. Refer to the full list of latest chart configurations in the https://github.com/kubernetes-sigs/azuredisk-csi-driver/blob/master/charts/README.md#latest-chart-configuration[upstream docs].
++
+[,shell]
+----
+helm install azuredisk-csi-driver azuredisk-csi-driver/azuredisk-csi-driver --namespace kube-system --version v1.30.1 --set controller.cloudConfigSecretName=azure-cloud-config --set controller.cloudConfigSecretNamespace=kube-system --set controller.runOnControlPlane=true
+----
+
+. (Optional) Verify that the azuredisk-csi-driver installation succeeded:
++
+[,shell]
+----
+kubectl --namespace=kube-system get pods --selector="app.kubernetes.io/name=azuredisk-csi-driver" --watch
+----
+
+. Provision an example Storage Class:
++
+[,shell]
+----
+cat <<EOF | kubectl create -f -
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
+metadata:
+  name: standard
+provisioner: kubernetes.io/azure-disk
+parameters:
+  storageaccounttype: Standard_LRS
+  kind: Managed
+EOF
+----
++
+Verify that the storage class has been provisioned:
++
+[,shell]
+----
+kubectl get storageclasses
+----
+
+. Create a PersistentVolumeClaim:
++
+[,shell]
+----
+cat <<EOF | kubectl create -f -
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: azure-disk-pvc
+spec:
+  storageClassName: standard
+  accessModes:
+ ** ReadWriteOnce
+  resources:
+ requests:
+storage: 5Gi
+EOF
+----
++
+Verify that the PersistentVolumeClaim and PersistentVolume have been created:
++
+[,shell]
+----
+kubectl get persistentvolumeclaim
+kubectl get persistentvolume
+----
+
+. Attach the new Azure Disk:
++
+You can now mount the Kubernetes PersistentVolume into a Kubernetes Pod. The disk can be consumed by any Kubernetes object type, including a Deployment, DaemonSet, or StatefulSet. However, the following example simply mounts the PersistentVolume into a standalone Pod.
++
+[,shell]
+----
+cat <<EOF | kubectl create -f -
+kind: Pod
+apiVersion: v1
+metadata:
+  name: mypod-dynamic-azuredisk
+spec:
+  containers:
+    - name: mypod
+      image: nginx
+      ports:
+        - containerPort: 80
+          name: "http-server"
+      volumeMounts:
+        - mountPath: "/usr/share/nginx/html"
+          name: storage
+  volumes:
+    - name: storage
+      persistentVolumeClaim:
+        claimName: azure-disk-pvc
+EOF
+----
