--- a/versions/latest/modules/en/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/install-adapter.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/install-adapter.adoc
@@ -93,11 +93,60 @@ NOTE: Accounts using the AWS Marketplace listing for the EU and the UK will need
 ======
 Tab Let's Encrypt/ Public Certificate Authority::
 +
-```bash helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter --namespace cattle-csp-adapter-system --set aws.enabled=true --set aws.roleName=$MY_ROLE_NAME --set-string aws.accountNumber=$MY_ACC_NUM --version $CSP_ADAPTER_VERSION ``` Alternatively, you can use a `values.yaml` and specify options like below: ```yaml aws: enabled: true accountNumber: "$MY_ACC_NUM" roleName: $MY_ROLE_NAME ``` > **Note:** The account number needs to be specified in a string format, like the above, or the installation will fail. You can then install the adapter with the following command: ```bash helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter -f values.yaml --version $CSP_ADAPTER_VERSION ``` 
+--
+[,bash]
+----
+  helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter --namespace cattle-csp-adapter-system --set aws.enabled=true --set aws.roleName=$MY_ROLE_NAME --set-string aws.accountNumber=$MY_ACC_NUM --version $CSP_ADAPTER_VERSION
+----
+
+Alternatively, you can use a `values.yaml` and specify options like below:
+
+[,yaml]
+----
+  aws:
+    enabled: true
+    accountNumber: "$MY_ACC_NUM"
+    roleName: $MY_ROLE_NAME
+----
+
+NOTE: The account number needs to be specified in a string format, like the above, or the installation will fail.
+
+You can then install the adapter with the following command:
+
+[,bash]
+----
+  helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter -f values.yaml --version $CSP_ADAPTER_VERSION
+----
+--
 
 Tab Private CA Authority / Rancher-generated Certificates::
 +
-```bash helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter --namespace cattle-csp-adapter-system --set aws.enabled=true --set aws.roleName=$MY_ROLE_NAME --set-string aws.accountNumber=$MY_ACC_NUM --set additionalTrustedCAs=true --version $CSP_ADAPTER_VERSION ``` Alternatively, you can use a `values.yaml` and specify options the below: ```yaml aws: enabled: true accountNumber: "$MY_ACC_NUM" roleName: $MY_ROLE_NAME additionalTrustedCAs: true ``` > **Note:** The account number needs to be specified in a string format, like the above, or the installation will fail. You can then install the adapter with the following command: ```bash helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter -f values.yaml --version $CSP_ADAPTER_VERSION ```
+--
+[,bash]
+----
+  helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter --namespace cattle-csp-adapter-system --set aws.enabled=true --set aws.roleName=$MY_ROLE_NAME --set-string aws.accountNumber=$MY_ACC_NUM --set additionalTrustedCAs=true --version $CSP_ADAPTER_VERSION
+----
+
+Alternatively, you can use a `values.yaml` and specify options the below:
+
+[,yaml]
+----
+  aws:
+    enabled: true
+    accountNumber: "$MY_ACC_NUM"
+    roleName: $MY_ROLE_NAME
+  additionalTrustedCAs: true
+----
+
+NOTE: The account number needs to be specified in a string format, like the above, or the installation will fail.
+
+You can then install the adapter with the following command:
+
+[,bash]
+----
+  helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter -f values.yaml --version $CSP_ADAPTER_VERSION
+----
+--
 ======
 
 === 5. Managing Certificate Updates
