--- a/versions/latest/modules/en/pages/installation-and-upgrade/hosted-kubernetes/rancher-on-gke.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/hosted-kubernetes/rancher-on-gke.adoc
@@ -72,11 +72,26 @@ Set up default gcloud settings using one of the following methods:
 ======
 Tab Using gcloud init::
 +
-1. Run gcloud init and follow the directions: ``` gcloud init ``` If you are using SSH on a remote server, use the --console-only flag to prevent the command from launching a browser: ``` gcloud init --console-only ``` 2. Follow the instructions to authorize gcloud to use your Google Cloud account and select the new project that you created. 
+--
+. Run gcloud init and follow the directions:
++
+----
+  gcloud init
+----
++
+If you are using SSH on a remote server, use the --console-only flag to prevent the command from launching a browser:
++
+----
+  gcloud init --console-only
+----
+
+. Follow the instructions to authorize gcloud to use your Google Cloud account and select the new project that you created.
+--
 
 Tab Using gcloud config::
 +
-
+--
+--
 ======
 
 == 4. Confirm that gcloud is configured correctly
