--- a/versions/latest/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
@@ -1,6 +1,5 @@
 = Port Requirements
 :description: Read about port requirements needed in order for Rancher to operate properly, both for Rancher nodes and downstream Kubernetes cluster nodes
-:doctype: book
 
 import PortsIaasNodes from '@site/src/components/PortsIaasNodes'
 import PortsCustomNodes from '@site/src/components/PortsCustomNodes'
@@ -19,7 +18,6 @@ Rancher can be installed on any Kubernetes cluster. For Rancher installs on a K3
 [NOTE]
 .Notes:
 ====
-
 * Rancher nodes may also require additional outbound access for any external authentication provider which is configured (LDAP for example).
 * Kubernetes recommends TCP 30000-32767 for node port services.
 * For firewalls, traffic may need to be enabled within the cluster and pod CIDR.
@@ -41,7 +39,6 @@ If you wish to utilize the metrics server, you will need to open port 10250 on e
 [NOTE]
 .Important:
 ====
-
 The VXLAN port on nodes should not be exposed to the world as it opens up your cluster network to be accessed by anyone. Run your nodes behind a firewall/security group that disables access to port 8472.
 ====
 
@@ -242,9 +239,9 @@ The VXLAN port on nodes should not be exposed to the world as it opens up your c
 | Rancher agent, Rancher UI/API, kubectl. Not needed if you have a load balancer doing TLS termination.
 |===
 
-= Typically all outbound traffic is allowed.
+Typically all outbound traffic is allowed.
+======
 
-[discrete]
 === Ports for Rancher Server in Docker
 
 .Click to expand
@@ -462,11 +459,46 @@ SUSE Linux may have a firewall that blocks all ports by default. To open the por
 ======
 Tab SLES 15 / openSUSE Leap 15::
 +
-1. SSH into the instance. 1. Start YaST in text mode: ``` sudo yast2 ``` 1. Navigate to **Security and Users** > **Firewall** > **Zones:public** > **Ports**. To navigate within the interface, follow these [instructions](https://doc.opensuse.org/documentation/leap/reference/html/book-reference/cha-yast-text.html#sec-yast-cli-navigate). 1. To open the required ports, enter them into the **TCP Ports** and **UDP Ports** fields. In this example, ports 9796 and 10250 are also opened for monitoring. The resulting fields should look similar to the following: ```yaml TCP Ports 22, 80, 443, 2376, 2379, 2380, 6443, 9099, 9796, 10250, 10254, 30000-32767 UDP Ports 8472, 30000-32767 ``` 1. When all required ports are enter, select **Accept**. 
+--
+. SSH into the instance.
+. Start YaST in text mode:
++
+----
+ sudo yast2
+----
+
+. Navigate to *Security and Users* > *Firewall* > *Zones:public* > *Ports*. To navigate within the interface, follow these https://doc.opensuse.org/documentation/leap/reference/html/book-reference/cha-yast-text.html#sec-yast-cli-navigate[instructions].
+. To open the required ports, enter them into the *TCP Ports* and *UDP Ports* fields. In this example, ports 9796 and 10250 are also opened for monitoring. The resulting fields should look similar to the following:
++
+[,yaml]
+----
+ TCP Ports
+ 22, 80, 443, 2376, 2379, 2380, 6443, 9099, 9796, 10250, 10254, 30000-32767
+ UDP Ports
+ 8472, 30000-32767
+----
+
+. When all required ports are enter, select *Accept*.
+--
 
 Tab SLES 12 / openSUSE Leap 42::
 +
-1. SSH into the instance. 1. Edit /`etc/sysconfig/SuSEfirewall2` and open the required ports. In this example, ports 9796 and 10250 are also opened for monitoring: ``` FW_SERVICES_EXT_TCP="22 80 443 2376 2379 2380 6443 9099 9796 10250 10254 30000:32767" FW_SERVICES_EXT_UDP="8472 30000:32767" FW_ROUTE=yes ``` 1. Restart the firewall with the new ports: ``` SuSEfirewall2 ```
+--
+. SSH into the instance.
+. Edit /`etc/sysconfig/SuSEfirewall2` and open the required ports. In this example, ports 9796 and 10250 are also opened for monitoring:
++
+----
+ FW_SERVICES_EXT_TCP="22 80 443 2376 2379 2380 6443 9099 9796 10250 10254 30000:32767"
+ FW_SERVICES_EXT_UDP="8472 30000:32767"
+ FW_ROUTE=yes
+----
+
+. Restart the firewall with the new ports:
++
+----
+ SuSEfirewall2
+----
+--
 ======
 
 *Result:* The node has the open ports required to be added to a custom cluster.
