--- a/versions/latest/modules/en/pages/integrations/neuvector/overview.adoc
+++ b/versions/latest/modules/en/pages/integrations/neuvector/overview.adoc
@@ -116,12 +116,57 @@ Below are the minimum recommended computing resources for the NeuVector chart in
 ======
 Tab RKE1::
 +
-- All NeuVector components are deployable if PSP is set to true. You will need to set additional configuration for your hardened cluster environment as follows: 1. Click **☰ > Cluster Management**. 1. Go to the cluster that you created and click **Explore**. 1. In the left navigation bar, click **Apps**. 1. Install (or upgrade to) NeuVector version `100.0.1+up2.2.2`. - Under **Edit Options** > **Other Configuration**, enable **Pod Security Policy** by checking the box (no other config needed): ![Enable PSP for RKE1 Hardened Cluster](/img/psp-nv-rke.png) 1. Click **Install** at the bottom-right to complete. 
+--
+* All NeuVector components are deployable if PSP is set to true.
++
+You will need to set additional configuration for your hardened cluster environment as follows:
+
+ .. Click *☰ > Cluster Management*.
+ .. Go to the cluster that you created and click *Explore*.
+ .. In the left navigation bar, click *Apps*.
+ .. Install (or upgrade to) NeuVector version `100.0.1+up2.2.2`.
+
+
+ ** Under *Edit Options* > *Other Configuration*, enable *Pod Security Policy* by checking the box (no other config needed):
++
+image:psp-nv-rke.png[Enable PSP for RKE1 Hardened Cluster]
+
+
+ .. Click *Install* at the bottom-right to complete.
+--
 
 Tab RKE2::
 +
-- NeuVector components Controller and Enforcer are deployable if PSP is set to true. **Applicable to NeuVector chart version 100.0.0+up2.2.0 only:** - For Manager, Scanner, and Updater components, additional configuration is required as shown below: ``` kubectl patch deploy neuvector-manager-pod -n cattle-neuvector-system --patch '{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}' kubectl patch deploy neuvector-scanner-pod -n cattle-neuvector-system --patch '{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}' kubectl patch cronjob neuvector-updater-pod -n cattle-neuvector-system --patch '{"spec":{"jobTemplate":{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}}}' ``` +
-You will need to set additional configuration for your hardened cluster environment. >**Note:** You must update your config in both RKE2 and K3s hardened clusters as shown below. 1. Click **☰ > Cluster Management**. 1. Go to the cluster that you created and click **Explore**. 1. In the left navigation bar, click **Apps**. 1. Install (or upgrade to) NeuVector version `100.0.1+up2.2.2`. - Under **Edit Options** > **Other Configuration**, enable **Pod Security Policy** by checking the box. Note that you must also enter a value greater than `zero` for `Manager runAsUser ID`, `Scanner runAsUser ID`, and `Updater runAsUser ID`: ![Enable PSP for RKE2 and K3s Hardened Clusters](/img/psp-nv-rke2.png) 1. Click **Install** at the bottom-right to complete.
+--
+* NeuVector components Controller and Enforcer are deployable if PSP is set to true.
++
+*Applicable to NeuVector chart version 100.0.0+up2.2.0 only:*
++
+** For Manager, Scanner, and Updater components, additional configuration is required as shown below:
++
+----
+kubectl patch deploy neuvector-manager-pod -n cattle-neuvector-system --patch '{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}'
+kubectl patch deploy neuvector-scanner-pod -n cattle-neuvector-system --patch '{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}'
+kubectl patch cronjob neuvector-updater-pod -n cattle-neuvector-system --patch '{"spec":{"jobTemplate":{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}}}'
+----
++
+You will need to set additional configuration for your hardened cluster environment.
++
+NOTE: You must update your config in both RKE2 and K3s hardened clusters as shown below.
+
+ .. Click *☰ > Cluster Management*.
+ .. Go to the cluster that you created and click *Explore*.
+ .. In the left navigation bar, click *Apps*.
+ .. Install (or upgrade to) NeuVector version `100.0.1+up2.2.2`.
+
+
+ ... Under *Edit Options* > *Other Configuration*, enable *Pod Security Policy* by checking the box. Note that you must also enter a value greater than `zero` for `Manager runAsUser ID`, `Scanner runAsUser ID`, and `Updater runAsUser ID`:
++
+image:psp-nv-rke2.png[Enable PSP for RKE2 and K3s Hardened Clusters]
+
+
+ .. Click *Install* at the bottom-right to complete.
+--
 ======
 
 == SELinux-enabled Cluster Support - Calico and Canal
