--- a/versions/latest/modules/en/pages/cluster-admin/manage-clusters/rotate-certificates.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/manage-clusters/rotate-certificates.adoc
@@ -15,11 +15,31 @@ Certificates can be rotated for the following services:
 ======
 Tab RKE::
 +
-- etcd - kubelet (node certificate) - kubelet (serving certificate, if [enabled](https://rancher.com/docs/rke/latest/en/config-options/services/#kubelet-options)) - kube-apiserver - kube-proxy - kube-scheduler - kube-controller-manager 
+--
+* etcd
+* kubelet (node certificate)
+* kubelet (serving certificate, if https://rancher.com/docs/rke/latest/en/config-options/services/#kubelet-options[enabled])
+* kube-apiserver
+* kube-proxy
+* kube-scheduler
+* kube-controller-manager
+--
 
 Tab RKE2::
 +
-- admin - api-server - controller-manager - scheduler - rke2-controller - rke2-server - cloud-controller - etcd - auth-proxy - kubelet - kube-proxy
+--
+* admin
+* api-server
+* controller-manager
+* scheduler
+* rke2-controller
+* rke2-server
+* cloud-controller
+* etcd
+* auth-proxy
+* kubelet
+* kube-proxy
+--
 ======
 
 [NOTE]
@@ -48,9 +68,13 @@ Rancher launched Kubernetes clusters have the ability to rotate the auto-generat
 ======
 Tab RKE::
 +
-Even though the RKE CLI can use custom certificates for the Kubernetes cluster components, Rancher currently doesn't allow the ability to upload these in Rancher launched Kubernetes clusters. 
+--
+Even though the RKE CLI can use custom certificates for the Kubernetes cluster components, Rancher currently doesn't allow the ability to upload these in Rancher launched Kubernetes clusters.
+--
 
 Tab RKE2::
 +
+--
 In RKE2, both etcd and control plane nodes are treated as the same `server` concept. As such, when rotating certificates of services specific to either of these components will result in certificates being rotated on both. The certificates will only change for the specified service, but you will see nodes for both components go into an updating state. You may also see worker only nodes go into an updating state. This is to restart the workers after a certificate change to ensure they get the latest client certs.
+--
 ======
