--- a/versions/latest/modules/en/pages/cluster-deployment/about-rancher-agents.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/about-rancher-agents.adoc
@@ -25,11 +25,19 @@ To configure request values through the UI:
 ======
 Tab RKE::
 +
-1. When you [create]() or edit an existing cluster, go to the **Cluster Options** section. 1. Expand the **Cluster Configuration** subsection. 1. Configure your request values using the **CPU Requests** and **Memory Requests** fields as needed. 
+--
+. When you xref:./launch-kubernetes-with-rancher.adoc[create] or edit an existing cluster, go to the *Cluster Options* section.
+. Expand the *Cluster Configuration* subsection.
+. Configure your request values using the *CPU Requests* and *Memory Requests* fields as needed.
+--
 
 Tab RKE2/K3s::
 +
-1. When you [create]() or edit an existing cluster, go to the **Cluster Configuration**. 1. Select the **Cluster Agent** subsection. 1. Configure your request values using the **CPU Reservation** and **Memory Reservation** fields as needed.
+--
+. When you xref:./launch-kubernetes-with-rancher.adoc[create] or edit an existing cluster, go to the *Cluster Configuration*.
+. Select the *Cluster Agent* subsection.
+. Configure your request values using the *CPU Reservation* and *Memory Reservation* fields as needed.
+--
 ======
 
 If you prefer to configure via YAML, add the following snippet to your configuration file:
@@ -38,11 +46,30 @@ If you prefer to configure via YAML, add the following snippet to your configura
 ======
 Tab RKE::
 +
-```yaml cluster_agent_deployment_customization: override_resource_requirements: requests: cpu: 50m memory: 100Mi ``` 
+--
+[,yaml]
+----
+cluster_agent_deployment_customization:
+  override_resource_requirements:
+    requests:
+      cpu: 50m
+      memory: 100Mi
+----
+--
 
 Tab RKE2/K3s::
 +
-```yaml spec: clusterAgentDeploymentCustomization: overrideResourceRequirements: requests: cpu: 50m memory: 100Mi ```
+--
+[,yaml]
+----
+spec:
+  clusterAgentDeploymentCustomization:
+    overrideResourceRequirements:
+      requests:
+        cpu: 50m
+        memory: 100Mi
+----
+--
 ======
 
 === Scheduling rules
