--- a/versions/latest/modules/en/pages/cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/amazon.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/amazon.adoc
@@ -21,9 +21,189 @@ The Kubernetes https://kubernetes.io/docs/tasks/administer-cluster/controller-ma
 ======
 Tab RKE2::
 +
-1. Update the cluster config to enable leader migration: ```yaml spec: rkeConfig: machineSelectorConfig: - config: kube-controller-manager-arg: - enable-leader-migration machineLabelSelector: matchExpressions: - key: rke.cattle.io/control-plane-role operator: In values: - 'true' ``` Note that the cloud provider is still `aws` at this step: ```yaml spec: rkeConfig: machineGlobalConfig: cloud-provider-name: aws ``` 2. Cordon control plane nodes so that AWS cloud controller pods run on nodes only after upgrading to the external cloud provider: ```shell kubectl cordon -l "node-role.kubernetes.io/control-plane=true" ``` 3. To install the AWS cloud controller manager with leader migration enabled, follow Steps 1-3 for [deploying the cloud controller manager chart](../set-up-cloud-providers/amazon.md#using-the-out-of-tree-aws-cloud-provider). From Kubernetes 1.22 onwards, the kube-controller-manager will utilize a default configuration which will satisfy the controller-to-manager migration. Update container args of the `aws-cloud-controller-manager` under `spec.rkeConfig.additionalManifest` to enable leader migration: ```shell - '--enable-leader-migration=true' ``` 4. Install the chart and confirm that the Daemonset `aws-cloud-controller-manager` successfully deployed: ```shell kubectl rollout status daemonset -n kube-system aws-cloud-controller-manager ``` 5. Update the provisioning cluster to change the cloud provider and remove leader migration args from the kube controller. If upgrading the Kubernetes version, set the Kubernetes version as well in the `spec.kubernetesVersion` section of the cluster YAML file :::note Important Only remove `cloud-provider-name: aws` if not relying on the rke2 supervisor to correctly set the providerID. ::: Remove `enable-leader-migration` if you don't want it enabled in your cluster: ```yaml spec: rkeConfig: machineGlobalConfig: cloud-provider-name: external ``` Remove `enable-leader-migration` from: ```yaml spec: rkeConfig: machineSelectorConfig: - config: kube-controller-manager-arg: - enable-leader-migration machineLabelSelector: matchExpressions: - key: rke.cattle.io/control-plane-role operator: In values: - 'true' ``` :::tip You can also disable leader migration after the upgrade, as leader migration is no longer required due to only one cloud-controller-manager and can be removed. Upgrade the chart and remove the following section from the container arguments: ```yaml - --enable-leader-migration=true ``` ::: Verify the cloud controller manager update was successfully rolled out with the following command: ```shell kubectl rollout status daemonset -n kube-system aws-cloud-controller-manager ``` 6. The cloud provider is responsible for setting the ProviderID of the node. Check if all nodes are initialized with the ProviderID: ```shell kubectl describe nodes | grep "ProviderID" ``` 
+--
+. Update the cluster config to enable leader migration:
++
+[,yaml]
+----
+spec:
+  rkeConfig:
+    machineSelectorConfig:
+      - config:
+          kube-controller-manager-arg:
+            - enable-leader-migration
+        machineLabelSelector:
+          matchExpressions:
+            - key: rke.cattle.io/control-plane-role
+              operator: In
+              values:
+                - 'true'
+----
++
+Note that the cloud provider is still `aws` at this step:
++
+[,yaml]
+----
+spec:
+  rkeConfig:
+    machineGlobalConfig:
+      cloud-provider-name: aws
+----
+
+. Cordon control plane nodes so that AWS cloud controller pods run on nodes only after upgrading to the external cloud provider:
++
+[,shell]
+----
+kubectl cordon -l "node-role.kubernetes.io/control-plane=true"
+----
++
+. To install the AWS cloud controller manager with leader migration enabled, follow Steps 1-3 for link:../set-up-cloud-providers/amazon.adoc#using-the-out-of-tree-aws-cloud-provider[deploying the cloud controller manager chart]. From Kubernetes 1.22 onwards, the kube-controller-manager will utilize a default configuration which will satisfy the controller-to-manager migration. Update container args of the `aws-cloud-controller-manager` under `spec.rkeConfig.additionalManifest` to enable leader migration:
++
+[,shell]
+----
+- '--enable-leader-migration=true'
+----
++
+. Install the chart and confirm that the Daemonset `aws-cloud-controller-manager` successfully deployed:
++
+[,shell]
+----
+kubectl rollout status daemonset -n kube-system aws-cloud-controller-manager
+----
++
+. Update the provisioning cluster to change the cloud provider and remove leader migration args from the kube controller.
+If upgrading the Kubernetes version, set the Kubernetes version as well in the `spec.kubernetesVersion` section of the cluster YAML file
++
+[NOTE]
+.Important
+====
+Only remove `cloud-provider-name: aws` if not relying on the rke2 supervisor to correctly set the providerID.
+====
++
+Remove `enable-leader-migration` if you don't want it enabled in your cluster:
++
+[,yaml]
+----
+spec:
+  rkeConfig:
+    machineGlobalConfig:
+      cloud-provider-name: external
+----
++
+Remove `enable-leader-migration` from:
++
+[,yaml]
+----
+spec:
+  rkeConfig:
+    machineSelectorConfig:
+      - config:
+          kube-controller-manager-arg:
+            - enable-leader-migration
+        machineLabelSelector:
+          matchExpressions:
+            - key: rke.cattle.io/control-plane-role
+              operator: In
+              values:
+                - 'true'
+----
++
+[TIP]
+====
+You can also disable leader migration after the upgrade, as leader migration is no longer required due to only one cloud-controller-manager and can be removed.
+Upgrade the chart and remove the following section from the container arguments:
+
+[,yaml]
+----
+- --enable-leader-migration=true
+----
+====
++
+Verify the cloud controller manager update was successfully rolled out with the following command:
++
+[,shell]
+----
+kubectl rollout status daemonset -n kube-system aws-cloud-controller-manager
+----
++
+. The cloud provider is responsible for setting the ProviderID of the node. Check if all nodes are initialized with the ProviderID:
++
+[,shell]
+----
+kubectl describe nodes | grep "ProviderID"
+----
+--
 
 Tab RKE::
 +
-1. Update the cluster config to enable leader migration in `cluster.yml`: ```yaml services: kube-controller: extra_args: enable-leader-migration: "true" ``` Note that the cloud provider is still `aws` at this step: ```yaml cloud_provider: name: aws ``` 2. Cordon the control plane nodes, so that AWS cloud controller pods run on nodes only after upgrading to the external cloud provider: ```shell kubectl cordon -l "node-role.kubernetes.io/controlplane=true" ``` 3. To install the AWS cloud controller manager, you must enable leader migration and follow the same steps as when installing AWS on a new cluster. To enable leader migration, add the following to the container arguments in step 7 while following the [steps to install the chart](../set-up-cloud-providers/amazon.md#helm-chart-installation-from-ui): ```yaml - '--enable-leader-migration=true' ``` 4. Confirm that the chart is installed but that the new pods aren't running yet due to cordoned controlplane nodes. After updating the cluster in the next step, RKE will upgrade and uncordon each node, and schedule `aws-controller-manager` pods. 5. Update `cluster.yml` to change the cloud provider and remove the leader migration arguments from the kube-controller. Selecting **External Amazon (out-of-tree)** sets `--cloud-provider=external` and lets you enable `useInstanceMetadataHostname`. You must enable `useInstanceMetadataHostname` for node-driver clusters and for custom clusters if not you don't provide a custom node name via `--node-name`. Enabling `useInstanceMetadataHostname` will query ec2 metadata service and set `/hostname` as `hostname-override` for `kubelet` and `kube-proxy`: ```yaml rancher_kubernetes_engine_config: cloud_provider: name: external-aws useInstanceMetadataHostname: true/false ``` Remove `enable-leader-migration` if you don't want it enabled in your cluster: ```yaml services: kube-controller: extra_args: enable-leader-migration: "true" ``` :::tip You can also disable leader migration after you finish the migration. Upgrade the chart and remove the following section from the container arguments: ```yaml - --enable-leader-migration=true ``` ::: 6. If you're upgrading the cluster's Kubernetes version, set the Kubernetes version as well. 7. Update the cluster. The `aws-cloud-controller-manager` pods should now be running.
+--
+. Update the cluster config to enable leader migration in `cluster.yml`:
++
+[,yaml]
+----
+services:
+  kube-controller:
+    extra_args:
+      enable-leader-migration: "true"
+----
++
+Note that the cloud provider is still `aws` at this step:
++
+[,yaml]
+----
+cloud_provider:
+  name: aws
+----
+
+. Cordon the control plane nodes, so that AWS cloud controller pods run on nodes only after upgrading to the external cloud provider:
++
+[,shell]
+----
+kubectl cordon -l "node-role.kubernetes.io/controlplane=true"
+----
+
+. To install the AWS cloud controller manager, you must enable leader migration and follow the same steps as when installing AWS on a new cluster. To enable leader migration, add the following to the container arguments in step 7 while following the link:../set-up-cloud-providers/amazon.adoc#helm-chart-installation-from-ui[steps to install the chart]:
++
+[,yaml]
+----
+- '--enable-leader-migration=true'
+----
+
+. Confirm that the chart is installed but that the new pods aren't running yet due to cordoned controlplane nodes. After updating the cluster in the next step, RKE will upgrade and uncordon each node, and schedule `aws-controller-manager` pods.
+. Update `cluster.yml` to change the cloud provider and remove the leader migration arguments from the kube-controller.
++
+Selecting *External Amazon (out-of-tree)* sets `--cloud-provider=external` and lets you enable `useInstanceMetadataHostname`. You must enable `useInstanceMetadataHostname` for node-driver clusters and for custom clusters if not you don't provide a custom node name via `--node-name`. Enabling `useInstanceMetadataHostname` will query ec2 metadata service and set `/hostname` as `hostname-override` for `kubelet` and `kube-proxy`:
++
+[,yaml]
+----
+rancher_kubernetes_engine_config:
+  cloud_provider:
+    name: external-aws
+    useInstanceMetadataHostname: true/false
+----
++
+Remove `enable-leader-migration` if you don't want it enabled in your cluster:
++
+[,yaml]
+----
+  services:
+    kube-controller:
+      extra_args:
+        enable-leader-migration: "true"
+----
++
+[TIP]
+====
+You can also disable leader migration after you finish the migration. Upgrade the chart and remove the following section from the container arguments:
+
+[,yaml]
+----
+- --enable-leader-migration=true
+----
+====
+
+
+. If  you're upgrading the cluster's Kubernetes version, set the Kubernetes version as well.
+. Update the cluster. The `aws-cloud-controller-manager` pods should now be running.
+--
 ======
