--- a/versions/latest/modules/en/pages/installation-and-upgrade/install-rancher.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/install-rancher.adoc
@@ -210,14 +210,177 @@ This final command to install Rancher requires a domain name that forwards traff
 ======
 Tab Rancher-generated Certificates::
 +
-The default is for Rancher to generate a CA and uses `cert-manager` to issue the certificate for access to the Rancher server interface. Because `rancher` is the default option for `ingress.tls.source`, we are not specifying `ingress.tls.source` when running the `helm install` command. - Set the `hostname` to the DNS name you pointed at your load balancer. - Set the `bootstrapPassword` to something unique for the `admin` user. - To install a specific Rancher version, use the `--version` flag, example: `--version 2.7.0` - For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose. ``` helm install rancher rancher-+++<CHART_REPO>+++/rancher \ --namespace cattle-system \ --set hostname=rancher.my.org \ --set bootstrapPassword=admin ``` If you are installing an alpha version, Helm requires adding the `--devel` option to the install command: ``` helm install rancher rancher-alpha/rancher --devel ``` Wait for Rancher to be rolled out: ``` kubectl -n cattle-system rollout status deploy/rancher Waiting for deployment "rancher" rollout to finish: 0 of 3 updated replicas are available\... deployment "rancher" successfully rolled out ```  
+--
+The default is for Rancher to generate a CA and uses `cert-manager` to issue the certificate for access to the Rancher server interface.
+
+Because `rancher` is the default option for `ingress.tls.source`, we are not specifying `ingress.tls.source` when running the `helm install` command.
+
+* Set the `hostname` to the DNS name you pointed at your load balancer.
+* Set the `bootstrapPassword` to something unique for the `admin` user.
+* To install a specific Rancher version, use the `--version` flag, example: `--version 2.7.0`
+* For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose.
+
+----
+helm install rancher rancher-<CHART_REPO>/rancher \
+  --namespace cattle-system \
+  --set hostname=rancher.my.org \
+  --set bootstrapPassword=admin
+----
+
+If you are installing an alpha version, Helm requires adding the `--devel` option to the install command:
+
+----
+helm install rancher rancher-alpha/rancher --devel
+----
+
+Wait for Rancher to be rolled out:
+
+----
+kubectl -n cattle-system rollout status deploy/rancher
+Waiting for deployment "rancher" rollout to finish: 0 of 3 updated replicas are available...
+deployment "rancher" successfully rolled out
+----
+--
 
 Tab Let's Encrypt::
 +
-This option uses `cert-manager` to automatically request and renew [Let's Encrypt](https://letsencrypt.org/) certificates. This is a free service that provides you with a valid certificate as Let's Encrypt is a trusted CA. :::note You need to have port 80 open as the HTTP-01 challenge can only be done on port 80. ::: In the following command, - `hostname` is set to the public DNS record, - Set the `bootstrapPassword` to something unique for the `admin` user. - `ingress.tls.source` is set to `letsEncrypt` - `letsEncrypt.email` is set to the email address used for communication about your certificate (for example, expiry notices) - Set `letsEncrypt.ingress.class` to whatever your ingress controller is, e.g., `traefik`, `nginx`, `haproxy`, etc. - For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose. :::warning When `agent-tls-mode` is set to `strict` (the default value for new installs of Rancher starting from v2.9.0), you must supply the `privateCA=true` chart value (e.x. through `--set privateCA=true`) and upload the Let's Encrypt Certificate Authority as outlined in [Adding TLS Secrets](resources/tls-secrets.md). Information on identifying the Let's Encrypt Root CA can be found in the Let's Encrypt [docs](https://letsencrypt.org/certificates/). If you don't upload the CA, then Rancher may fail to connect to new or existing downstream clusters. ::: ``` helm install rancher rancher-+++<CHART_REPO>+++/rancher \ --namespace cattle-system \ --set hostname=rancher.my.org \ --set bootstrapPassword=admin \ --set ingress.tls.source=letsEncrypt \ --set letsEncrypt.email=me@example.org \ --set letsEncrypt.ingress.class=nginx ``` If you are installing an alpha version, Helm requires adding the `--devel` option to the install command: ``` helm install rancher rancher-alpha/rancher --devel ``` Wait for Rancher to be rolled out: ``` kubectl -n cattle-system rollout status deploy/rancher Waiting for deployment "rancher" rollout to finish: 0 of 3 updated replicas are available\... deployment "rancher" successfully rolled out ```  
+--
+This option uses `cert-manager` to automatically request and renew https://letsencrypt.org/[Let's Encrypt] certificates. This is a free service that provides you with a valid certificate as Let's Encrypt is a trusted CA.
+
+[NOTE]
+====
+
+You need to have port 80 open as the HTTP-01 challenge can only be done on port 80.
+====
+
+
+In the following command,
+
+* `hostname` is set to the public DNS record,
+* Set the `bootstrapPassword` to something unique for the `admin` user.
+* `ingress.tls.source` is set to `letsEncrypt`
+* `letsEncrypt.email` is set to the email address used for communication about your certificate (for example, expiry notices)
+* Set `letsEncrypt.ingress.class` to whatever your ingress controller is, e.g., `traefik`, `nginx`, `haproxy`, etc.
+* For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose.
+
+[CAUTION]
+====
+
+When `agent-tls-mode` is set to `strict` (the default value for new installs of Rancher starting from v2.9.0), you must supply the `privateCA=true` chart value (e.x. through `--set privateCA=true`) and upload the Let's Encrypt Certificate Authority as outlined in xref:../resources/add-tls-secrets.adoc[Adding TLS Secrets]. Information on identifying the Let's Encrypt Root CA can be found in the Let's Encrypt https://letsencrypt.org/certificates/[docs]. If you don't upload the CA, then Rancher may fail to connect to new or existing downstream clusters.
+====
+
+
+----
+helm install rancher rancher-<CHART_REPO>/rancher \
+  --namespace cattle-system \
+  --set hostname=rancher.my.org \
+  --set bootstrapPassword=admin \
+  --set ingress.tls.source=letsEncrypt \
+  --set letsEncrypt.email=me@example.org \
+  --set letsEncrypt.ingress.class=nginx
+----
+
+If you are installing an alpha version, Helm requires adding the `--devel` option to the install command:
+
+----
+helm install rancher rancher-alpha/rancher --devel
+----
+
+Wait for Rancher to be rolled out:
+
+----
+kubectl -n cattle-system rollout status deploy/rancher
+Waiting for deployment "rancher" rollout to finish: 0 of 3 updated replicas are available...
+deployment "rancher" successfully rolled out
+----
+--
 
 Tab Certificates from Files::
 +
-In this option, Kubernetes secrets are created from your own certificates for Rancher to use. When you run this command, the `hostname` option must match the `Common Name` or a `Subject Alternative Names` entry in the server certificate or the Ingress controller will fail to configure correctly. Although an entry in the `Subject Alternative Names` is technically required, having a matching `Common Name` maximizes compatibility with older browsers and applications. :::note If you want to check if your certificates are correct, see [How do I check Common Name and Subject Alternative Names in my server certificate?](../faq/technical-items.md#how-do-i-check-common-name-and-subject-alternative-names-in-my-server-certificate) ::: - Set the `hostname`. - Set the `bootstrapPassword` to something unique for the `admin` user. - Set `ingress.tls.source` to `secret`. - For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose. ``` helm install rancher rancher-+++<CHART_REPO>+++/rancher \ --namespace cattle-system \ --set hostname=rancher.my.org \ --set bootstrapPassword=admin \ --set ingress.tls.source=secret ``` If you are installing an alpha version, Helm requires adding the `--devel` option to the install command: ``` helm install rancher rancher-alpha/rancher --devel ``` If you are using a Private CA signed certificate , add `--set privateCA=true` to the command: ``` helm install rancher rancher-+++<CHART_REPO>+++/rancher \ --namespace cattle-system \ --set hostname=rancher.my.org \ --set bootstrapPassword=admin \ --set ingress.tls.source=secret \ --set privateCA=true ``` Now that Rancher is deployed, see [Adding TLS Secrets](resources/tls-secrets.md) to publish the certificate files so Rancher and the Ingress controller can use them.  
-====== The Rancher chart configuration has many options for customizing the installation to suit your specific environment. Here are some common advanced scenarios. - [HTTP Proxy](references/helm-chart-options.md#http-proxy) - [Private Container Image Registry](references/helm-chart-options.md#private-registry-and-air-gap-installs) - [TLS Termination on an External Load Balancer](references/helm-chart-options.md#external-tls-termination) See the [Chart Options](references/helm-chart-options.md) for the full list of options. ### 6. Verify that the Rancher Server is Successfully Deployed After adding the secrets, check if Rancher was rolled out successfully: ``` kubectl -n cattle-system rollout status deploy/rancher Waiting for deployment "rancher" rollout to finish: 0 of 3 updated replicas are available\... deployment "rancher" successfully rolled out ``` If you see the following error: `error: deployment "rancher" exceeded its progress deadline`, you can check the status of the deployment by running the following command: ``` kubectl -n cattle-system get deploy rancher NAME DESIRED CURRENT UP-TO-DATE AVAILABLE AGE rancher 3 3 3 3 3m ``` It should show the same count for `DESIRED` and `AVAILABLE`. ### 7. Save Your Options Make sure you save the `--set` options you used. You will need to use the same options when you upgrade Rancher to new versions with Helm. ### Finishing Up That's it. You should have a functional Rancher server. In a web browser, go to the DNS name that forwards traffic to your load balancer. Then you should be greeted by the colorful login page. Doesn't work? Take a look at the [Troubleshooting](troubleshooting/troubleshooting.md) Page+++</CHART_REPO>++++++</CHART_REPO></CHART_REPO></CHART_REPO>
+--
+In this option, Kubernetes secrets are created from your own certificates for Rancher to use.
+
+When you run this command, the `hostname` option must match the `Common Name` or a `Subject Alternative Names` entry in the server certificate or the Ingress controller will fail to configure correctly.
+
+Although an entry in the `Subject Alternative Names` is technically required, having a matching `Common Name` maximizes compatibility with older browsers and applications.
+
+[NOTE]
+====
+
+If you want to check if your certificates are correct, see link:../../../faq/technical-items.adoc#how-do-i-check-common-name-and-subject-alternative-names-in-my-server-certificate[How do I check Common Name and Subject Alternative Names in my server certificate?]
+====
+
+
+* Set the `hostname`.
+* Set the `bootstrapPassword` to something unique for the `admin` user.
+* Set `ingress.tls.source` to `secret`.
+* For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose.
+
+----
+helm install rancher rancher-<CHART_REPO>/rancher \
+  --namespace cattle-system \
+  --set hostname=rancher.my.org \
+  --set bootstrapPassword=admin \
+  --set ingress.tls.source=secret
+----
+
+If you are installing an alpha version, Helm requires adding the `--devel` option to the install command:
+
+----
+helm install rancher rancher-alpha/rancher --devel
+----
+
+If you are using a Private CA signed certificate , add `--set privateCA=true` to the command:
+
+----
+helm install rancher rancher-<CHART_REPO>/rancher \
+  --namespace cattle-system \
+  --set hostname=rancher.my.org \
+  --set bootstrapPassword=admin \
+  --set ingress.tls.source=secret \
+  --set privateCA=true
+----
+
+Now that Rancher is deployed, see xref:../resources/add-tls-secrets.adoc[Adding TLS Secrets] to publish the certificate files so Rancher and the Ingress controller can use them.
+--
 ======
+
+The Rancher chart configuration has many options for customizing the installation to suit your specific environment. Here are some common advanced scenarios.
+
+* link:../installation-references/helm-chart-options.adoc#http-proxy[HTTP Proxy]
+* link:../installation-references/helm-chart-options.adoc#private-registry-and-air-gap-installs[Private Container Image Registry]
+* link:../installation-references/helm-chart-options.adoc#external-tls-termination[TLS Termination on an External Load Balancer]
+
+See the xref:../installation-references/helm-chart-options.adoc[Chart Options] for the full list of options.
+
+=== 6. Verify that the Rancher Server is Successfully Deployed
+
+After adding the secrets, check if Rancher was rolled out successfully:
+
+----
+kubectl -n cattle-system rollout status deploy/rancher
+Waiting for deployment "rancher" rollout to finish: 0 of 3 updated replicas are available...
+deployment "rancher" successfully rolled out
+----
+
+If you see the following error: `error: deployment "rancher" exceeded its progress deadline`, you can check the status of the deployment by running the following command:
+
+----
+kubectl -n cattle-system get deploy rancher
+NAME      DESIRED   CURRENT   UP-TO-DATE   AVAILABLE   AGE
+rancher   3         3         3            3           3m
+----
+
+It should show the same count for `DESIRED` and `AVAILABLE`.
+
+=== 7. Save Your Options
+
+Make sure you save the `--set` options you used. You will need to use the same options when you upgrade Rancher to new versions with Helm.
+
+=== Finishing Up
+
+That's it. You should have a functional Rancher server.
+
+In a web browser, go to the DNS name that forwards traffic to your load balancer. Then you should be greeted by the colorful login page.
+
+Doesn't work? Take a look at the xref:troubleshooting.adoc[Troubleshooting] Page
