--- a/versions/latest/modules/en/pages/installation-and-upgrade/resources/bootstrap-password.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/resources/bootstrap-password.adoc
@@ -18,25 +18,19 @@ Minimum password length can be any positive integer value between 2 and 256. Dec
 
 == Specifying the Bootstrap Password
 
-[tabs]
-======
-Tab Helm::
-+
-During [Rancher installation](../install-rancher.md), set `bootstrapPassword` alongside any other flags for the Rancher Helm chart. For example: ```bash helm install rancher rancher-+++<chart-repo>+++/rancher \ --set bootstrapPassword=+++<password>+++```  
+During xref:../install-upgrade-on-a-kubernetes-cluster/install-upgrade-on-a-kubernetes-cluster.adoc[Rancher installation], set `bootstrapPassword` alongside any other flags for the Rancher Helm chart. For example:
 
-Tab Docker::
-+
-Pass the following value to the [Docker install command](../../getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/docker-install-commands.md): ```bash -e CATTLE_BOOTSTRAP_PASSWORD=+++<password>+++```  
-====== ## Retrieving the Bootstrap Password The bootstrap password is stored in the Docker container logs. After Rancher is installed, the UI shows instructions for how to retrieve the password based on your installation method. 
+[,bash]
+----
+helm install rancher rancher-<chart-repo>/rancher \
+  --set bootstrapPassword=<password>
+----
 
-[tabs]
-======
-Tab Helm::
-+
-```bash kubectl get secret --namespace cattle-system bootstrap-secret -o go-template='{{ .data.bootstrapPassword|base64decode}}{{ "\n" }}' ``` 
+## Retrieving the Bootstrap Password
 
-Tab Docker::
-+
-```bash docker logs container-id 2>&1 | grep "Bootstrap Password:" ```
-======</password></password>++++++</chart-repo>
-======
+The bootstrap password is stored in the Docker container logs. After Rancher is installed, the UI shows instructions for how to retrieve the password based on your installation method. 
+
+[,bash]
+----
+kubectl get secret --namespace cattle-system bootstrap-secret -o go-template='{{ .data.bootstrapPassword|base64decode}}{{ "\n" }}'
+----
